--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Сумма</title>
+	<title>Массив / 2</title>
 	<script type="text/javascript">
 		function Krat() {
 			var NumArr = Number(document.forms["frm"].elements["NumArr"].value);
